@@ -1,4 +1,4 @@
-[% labels    = ['current status', 'formats'] -%]
+[% labels    = ['current status', 'current formats'] -%]
 [% addresses = ['instrument/graphical', 'instrument_format'] -%]
 [% counts    = [0, 2] -%]
 <p class="npgmenu1">
